mdcfg (1.11) UNRELEASED; urgency=low

  * Christian Perrier
    - Add a comment about the Choices length for translators
      in the debconf templates file
  * Colin Watson
    - Only write mdadm.conf if RAID is in use.
    - Remove useless dependency on parted-udeb.

 -- Christian Perrier <bubulle@debian.org>  Sat, 19 Mar 2005 12:23:14 +0100

mdcfg (1.10) unstable; urgency=low

  * Matt Kraai
    - Fix the spelling of "file system".
  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Romanian (ro.po) by Eddy Petrisor
    - Turkish (tr.po) by Recai Oktaş
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Feb 2005 22:07:16 -0500

mdcfg (1.09) unstable; urgency=low

  * Note that this includes fix(es) for variable substitution bugs in
    translated templates.
  * Updated translations: 
    - Bosnian (bs.po) by Safir Šećerović
    - Welsh (cy.po) by Dafydd Harries
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor

 -- Joey Hess <joeyh@debian.org>  Wed,  2 Feb 2005 17:15:49 -0500

mdcfg (1.08) unstable; urgency=low

  * Updated translations: 
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team (Note, includes fix for broken subst var.)

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Nov 2004 15:47:42 -0500

mdcfg (1.07) unstable; urgency=low

  * Joshua Kwan
    - remove myself from Uploaders, I no longer have time to help keep this
      package in shape.
  * Joey Hess
    - Applied a patch from Andrew Pollock to add support for making raid1
      arrays in degraded mode. Closes: #253693, #276079

 -- Joey Hess <joeyh@debian.org>  Mon, 25 Oct 2004 20:35:51 -0400
