@@ -173,7 +173,7 @@ md_create_raid0() {
 
 	RAID_DEVICES="$(echo ${RET} | sed -e 's/,//g')"
 	echo "Commandline:"
-	`mdadm --create /dev/md/${MD_NUM} --force -R -l raid0 -n ${SELECTED} ${RAID_DEVICES}`
+	`mdadm --create /dev/md/${MD_NUM} --auto=yes --force -R -l raid0 -n ${SELECTED} ${RAID_DEVICES}`
 }
 
 md_create_raid1() {
@@ -309,7 +309,7 @@ md_create_raid1() {
 	echo "Raid devices count: ${DEV_COUNT}"
 	echo "Spare devices count: ${SPARE_COUNT}"
 	echo "Commandline:"
-	`mdadm --create /dev/md/${MD_NUM} --force -R -l raid1 -n ${DEV_COUNT} -x ${SPARE_COUNT} ${RAID_DEVICES} ${MISSING_DEVICES} ${SPARE_DEVICES} ${MISSING_SPARES}`
+	`mdadm --create /dev/md/${MD_NUM} --auto=yes --force -R -l raid1 -n ${DEV_COUNT} -x ${SPARE_COUNT} ${RAID_DEVICES} ${MISSING_DEVICES} ${SPARE_DEVICES} ${MISSING_SPARES}`
 }
 
 md_create_raid5() {
@@ -449,7 +449,7 @@ md_create_raid5() {
 	echo "Raid devices count: ${DEV_COUNT}"
 	echo "Spare devices count: ${SPARE_COUNT}"
 	echo "Commandline:"
-	`mdadm --create /dev/md/${MD_NUM} --force -R -l raid5 -n ${DEV_COUNT} -x ${SPARE_COUNT} ${RAID_DEVICES} ${SPARE_DEVICES} ${MISSING_SPARES}`
+	`mdadm --create /dev/md/${MD_NUM} --auto=yes --force -R -l raid5 -n ${DEV_COUNT} -x ${SPARE_COUNT} ${RAID_DEVICES} ${SPARE_DEVICES} ${MISSING_SPARES}`
 }
 
 md_mainmenu() {
