@@ -6,6 +6,8 @@ mdcfg (1.11) UNRELEASED; urgency=low
   * Colin Watson
     - Only write mdadm.conf if RAID is in use.
     - Remove useless dependency on parted-udeb.
+    - Use --auto=yes parameter to mdadm when creating arrays, to avoid
+      failing with udev.
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 19 Mar 2005 12:23:14 +0100
 
